fix overflow on mobile, just one more time
Thanks Pazzaz!

--- a/content/css/main.css
+++ b/content/css/main.css
@@ -46,7 +46,7 @@ dt { font-weight: bold; }
 aside.admn { display: flex; flex-direction: row; align-items: center; }
 aside.admn > svg.icon { flex-shrink: 0; width: 2rem; height: 2rem; fill: #19407c; }
 aside.admn.warn > svg.icon { fill: #ba3925; }
-aside.admn > div { padding-left: 1ch; margin-left: 1ch; border-left: 1px solid #dddddf }
+aside.admn > div { flex: 1; width: 0; padding-left: 1ch; margin-left: 1ch; border-left: 1px solid #dddddf }
 
 aside.block {
     border-style: solid; border-width: 1px; border-radius: 4px; border-color: #dbdbd6;
@@ -115,7 +115,7 @@ hr::after { content: '❧'; display: block; text-align: center; }
 /* Inline */
 
 p>code { white-space: nowrap; } /* Sadly, overflow-wrap: anywhere doesn't compose with this */
-.display { display: block; margin: 1em 0; text-align: center }
+.display { display: block; margin: 1em 0; text-align: center; overflow-x: auto; }
 
 a { text-decoration-color: #2156a5; color: black; }
 a:hover, a:focus { color: #2156a5; fill: #2156a5; }
